--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-schedule",
+  "name": "anime-schedule",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,13 +10,14 @@
   "dependencies": {
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.12",
+    "@types/node": "17.0.8",
     "@types/react": "17.0.38",
-    "eslint": "8.7.0",
+    "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
-    "typescript": "4.5.5"
+    "typescript": "4.5.4"
   }
 }
