--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "next": "12.0.8",
